--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -14,9 +14,11 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 8px;
 }
 
-a {
+.btn {
     text-decoration: none;
     font-size: 20px;
     color: black;
 }
+
+
 
